Closed Bug 108530 Opened 23 years ago Closed 23 years ago

Setup.exe error on install, mozilla launches with full screen empty page

Categories

(SeaMonkey :: Installer, defect)

x86
Windows NT
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: agracebush, Assigned: ssu0262)

References

Details

(Keywords: crash, platform-parity, smoketest)

Attachments

(8 files)

Nightly build for 11/5
Run installer

Expected results: Mozilla launches 

actual results: Setup.exe generates a dr. watson log during installation.  Files 
exist in installation directory but when I try to launch-full screen empty 
window displays- with no title bar - nothing to tell what it is
Cannot reproduce this on Windows 2000- will check to see what may be causing on 
my WinNT box
QA Contact: bugzilla → gbush
Nightly 2001-11-06-03-trunk win32 crashes for me on install. Running WinNT 4.0
SP6a. Will attach a .zip containing install_status.log, install_wizard.log and
drwtsn32.log.
Attached file A zip with log files.
Juha,

Thanks for proving I am not alone (or nuts) in this- your logs look exactly like 
mine.  I plan on more testing today- running sea file etc - will add results 
here.

Also seeing this in commercial trunk build for 11/6
Continues to crash on commercial builds - both stub and full installer
changing to critical for folks who only have NT machines
Severity: normal → critical
*** Bug 108859 has been marked as a duplicate of this bug. ***
logged into NT as administrator and am able to install build 2001110703
For me crashes also when run as administrator (tried with build 2001110806).
I heard of report here that running as administrator did not succeed too.
yes..that is me :(
I am totally blocked due to this bug...am crawling to other people's cubes to 
use their win boxes:(
just tried to install 2001110809, crashes on 0x60c76189

together with my previous pointer at bug 108859 (0x60c761f1), that must be a
(small) lead?

i saw it try to install the profile manager just before it crashed.
i'll see if i can attach a stack trace.

'access violation in xpinstall.dll'

stack trace :

XPINSTAL! 60c76189()
XPINSTAL! 60c63e44()
XPINSTAL! 60c63d38()
XPINSTAL! 60c694bb()
JS3250! 60d29c95()
JS3250! 60d2ee1a()
JS3250! 60d2a0f9()
JS3250! 60d1479d()
JS3250! 60d1475e()
JS3250! 60d146e0()
XPINSTAL! 60c6be7e()
XPINSTAL! 60c6bc19()
XPISTUB! 60f9144b()
SETUP! 004132c7()
SETUP! 0040559e()

code snippet, probably useless, i'll include it nonetheless:

  60C76127   lea         ecx,[ebp-39Ch]
  60C7612D   jmp         60C75D89
  60C76132   lea         ecx,[ebp-4C4h]
  60C76138   call        dword ptr ds:[60C78510h]
  60C7613E   mov         eax,[60C784F0]
  60C76143   push        0FFh
  60C76145   push        60C7F734h
  60C7614A   lea         ecx,[ebp-4C4h]
  60C76150   mov         dword ptr [ebp-4C4h],eax
  60C76156   call        dword ptr ds:[60C784F4h]
  60C7615C   mov         ecx,dword ptr [esi+4]
  60C7615F   lea         eax,[ebp-4C4h]
  60C76165   push        eax
  60C76166   call        60C64A34
  60C7616B   lea         ecx,[ebp-4C4h]
  60C76171   mov         edi,eax
  60C76173   call        dword ptr ds:[60C78514h]
  60C76179   test        edi,edi
  60C7617B   je          60C762C1
  60C76181   mov         eax,dword ptr [esi+14h]
  60C76184   lea         edx,[ebp-10h]
  60C76187   push        edx
  60C76188   push        eax
=>60C76189   mov         ecx,dword ptr [eax] 
  60C7618B   call        dword ptr [ecx+80h]
  60C76191   push        dword ptr [ebp-10h]
  60C76194   lea         ecx,[ebp-24h]
  60C76197   call        dword ptr ds:[60C78498h]



register dump:
 EAX = 00000000 EBX = 00001000
 ECX = 00129E38 EDX = 0012A2E8
 ESI = 008B71B0 EDI = 008B7100
 EIP = 60C76189 ESP = 00129BD0
 EBP = 0012A2F8 EFL = 00000206
 MM0 = 000001117FFDE044
 MM1 = 2B0600000111004C
 MM2 = 00C410F0010A04D6
 MM3 = D0C8F0ED5DCC77E7
 MM4 = 0000000000000000
 MM5 = 8000000000000000
 MM6 = A808600000000000
 MM7 = D000000000000000
 CS = 001B DS = 0023 ES = 0023 SS = 0023
 FS = 0038 GS = 0000 OV=0 UP=0 EI=1 PL=0
 ZR=0 AC=0 PE=1 CY=0
 ST0 = -0.00000042748293426e+1293
 ST1 = +0.00000000000000000e+0000
 ST2 = -0.01302363582825907e+2115
 ST3 = +0.00000000000000000e+0000
 ST4 = +0.00000000000000000e+0000
 ST5 = +1.00000000000000000e+0000
 ST6 = +3.44131000000000000e+0005
 ST7 = -2.08000000000000000e+0002
 CTRL = 027F STAT = 4020 TAGS = FFFF
 EIP = 60D330DC
 CS = 001B DS = 0023 EDO = 0012A88C
Adding crash keyword.
Keywords: crash, pp
*** Bug 109367 has been marked as a duplicate of this bug. ***
I can't execute step I2 from the smoketest list under WinNT:

I.2 Installer Use the installer to install the latest build of Seamonkey. Use a
separate directory to install the new build. If using a Mozilla build, unzip the
package instead.

Adding Tracy Walker to cc as this looks pretty much like a monday morning
smoketest blocker.
Keywords: smoketest
I'm unable to install the latest mozilla build on my WinNT4 system so I have to
use another computer with IE installed on it, yak (:
Is anyone looking at this, please? Thx!
marking blocker for folks with NT machines
ccing more folks
Severity: critical → blocker
I'll take a look at this one.
Status: NEW → ASSIGNED
I'm also seeing this on Windows 95 B. While installing mozilla nightly build 
2001-11-14-10 from mozilla-win32-installer-sea.exe, complete install with "use 
quick launch..." checked I get a crash in XPINSTAL.DLL while "preparing file: 
Profile Manager"

I have not been able to install any of the November builds.
I'm still unable to install mozilla on a WinNT system. Is someone looking at
this issue or what? It's assigned but that doesn't say a thing, so Syd, please
wake up!
Looking, just finished a build on Windows NT...
Hrmmm, works for me Windows NT 4.0 Netscape Build 2001111503 
Juha: interesting, in the log, it claims all components found locally. Could you
wipe those all away, and let them get downloaded insead, and see if that works?
Actually, just save them off somewhere for me, in case I want to have you look
at them. 

grace, are we seeing this with the stub install and the blob installer, or just
with one of these?
The blob installer works for me as well, Netscape 2001111503. Trying mozilla
installers. Could someone who is seeing this doa full directory listing,
including file sizes and dates, of the directory into which the product was
installed? Or, if you have the ability to compare with a working install on,
say, NT 2000 and can identify the differences in the files installed, and let me
know what they are?
mozilla installer, both blob (sea) and stub work too. And I tested with and
without Turbo mode. Sorry guys, this sure doesn't block me at all. Give me
something to work with (like a file list or dir diff...)
This is what I get after trying to install
http://ftp.mozilla.org/pub/mozilla/nightly/2001-11-15-09-trunk/mozilla-win32-installer-sea.exe.
Crashes at the same point as before.(attachment follows).
Attached file Directory listing.
Here is a listing of my C:\Program Files\mozilla.org\Mozilla dir after crashing

with the latest (2001111509) stub installer. My OS is Windows 95 B.
sorry to be so long in responding- I found three! mid air collision on this :(((

error message I get is access violation with dr watson log- same as posted here 
by other user

I see it with both stub and blob- I also suspected left over files from a 
previous attempt so made sure I removed all files in temp each time.  
What is strange is the download goes fine, and during Navigator install- the 
progress bar is moving, the second bar is moving left to right and back- files 
being installed are being noted 
When it gets to Installing: Profile Manager- it crashes.
On a normal install I believe it should next go to writing to registry - which 
is why I originally thought it was a permissions problem (someone had used my NT 
during the network upgrade) 
I do not have the problem on 98 or 2000.
Grace, are you doing the typical install? Juha and Antoni, I see differences in
filesets based on the listings and my successful install. 
I just tried on my NT4 (sp6) and Win2k.  Both mozilla and ns installed fine.

I took a look at Shrirang's machine and was able to find out where it was
crashing at.  It crashes when attempting to create the shortcuts in the Start
menu.  'Profile Manager' is the string description for the first shortcut it's
trying to create.  Once I commented out the code to create the shortcuts (all
the instances), the installer finished fine.

I noticed that Shrirang's machine is having windows profile problems.  I need to
take a look at Grace's machine to see if she's having the same problem too.

Grace, can you see if the shipping n6.2 installer works on the NT4 system you're
having problems with?

Curt, David, Syd, do you know if xpinstall's windows shortcut creation code was
recently touched?
I suspect my NT machine has profile problem too as when I installed as admin I 
was ok. And that machine had been used by someone other than me on the weekend 
preceding this problem

Yes I was able to install 6.2- both stub and blob- since this problem arose.
I'll look for checkins by us on the 4th or 5th that maybe caused this...
i am working (and thus installing) as admin and it doesn't work.

SU_uninstall (where the installer crashes according to dr.watson) was recently
touched, by dbaron for bug 69873 (version 1.19).

see 
http://bonsai.mozilla.org/cvslog.cgi?file=mozilla/xpinstall/src/nsInstallUninstall.cpp
and 
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/xpinstall/src/nsInstallUninstall.cpp
problem is this bug got filed on 11/5...
... and that is a long time to go without detecting it. I scanned bonsai and
there were no checkins to xpinstall around from 11/03/2001 00:01:00 to
11/05/2001 23:59, so if it is in xpinstall, it was from some earlier checkin.
yeah, i noticed that too.

but how would explain the dr.watson log then?
it seems to crash there, i don't think it should :)
Syd,

see bug 28172- checked in 11/2 -and we were closed down that weekend for network 
upgrade so no testing until 11/5 am.
FWIW, the info in comment #13 suggests the crash is due to an attempt to call
the 32nd virtual function on an interface pointer (QI=0, AddRef=1, Release=2,
etc.), where the function takes one argument that looks like a pointer to an
variable on the stack.
...and the object on which you're trying to call said virtual method is null.
And, FWIW, SU_Uninstall is declared as |extern "C" NS_EXPORT| so Dr. Watson
showing a crash there could also mean it's in any number of non-exported
functions following that one.
Perhaps someone could try this and see if it helps?
nsIFile::GetPath is the 32nd virtual function on nsIFile, and is used in many
places in the xpinstall code.
In spite of the log, there's no way it's crashing because of nsInstallUninstall
-- that's essentially dead code until the uninstall feature is re-implemented.
Severity: blocker → critical
The disassembly in comment 13 seems to fit nicely the following call to GetPath
in nsInstallFileOpItem.cpp (which is the one of the few whose |this| isn't
null-checked):

    case NS_FOP_WIN_SHORTCUT:
      rsrcVal = mInstall->GetResourcedString(NS_LITERAL_STRING("WindowsShortcut"));
      if(rsrcVal != nsnull)
      {
        mShortcutPath->GetPath(&temp);
Severity: critical → blocker
patch checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
does this problem show up in the talkback database in any significant numbers?
this is an installer crash, thus 0 talkback reports.
Test results of having various tool bars in the mailnews main window. I was
using a stopwatch to manually measure the time and the sidebar was off for the
tests.

  All Bars    No Tool    No Tool &     No Bar
                Bar      Status Bars   At All
  --------    -------    -----------   ------
    7.03       6.64         6.55        6.48

   % Faster    5.55%        6.83%       7.82%

'No bar At All' means no tool bar, status bar and quick search bar.

I also noticed that the only difference between the two timing logs is that the 
following lines are missing from the timing log of the scenario without the tool 
bar:

00022.893:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/getmsg.gif)
00022.893:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/getmsg.gif)
00022.913:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/newmsg.gif)
00022.913:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/newmsg.gif)
00022.923:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/reply.gif)
00022.923:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/reply.gif)
00022.933:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/replyall.gif)
00022.933:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/replyall.gif)
00022.953:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/forward.gif)
00022.953:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/forward.gif)
00022.963:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/file.gif)
00022.963:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/file.gif)
00022.973:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/next.gif)
00022.973:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/next.gif)
00022.983:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/delete.gif)
00022.993:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/delete.gif)
00023.013:   
nsIOService::NewChannelFromURI(chrome://communicator/skin/btn1/print.gif)
00023.013:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/co
mmunicator/btn1/print.gif)
00023.023:   
nsIOService::NewChannelFromURI(chrome://communicator/skin/btn1/stop.gif)
00023.023:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/co
mmunicator/btn1/stop.gif)
00023.073:

00024.765:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/reply-dis.gif)
00024.765:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/reply-dis.gif)
00024.775:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/replyall-dis.gif)
00024.775:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/replyall-dis.gif)
00024.795:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/forward-dis.gif)
00024.795:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/forward-dis.gif)
00024.805:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/delete-dis.gif)
00024.805:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/delete-dis.gif)
00024.835:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/getmsg-dis.gif)
00024.835:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/getmsg-dis.gif)
00024.855:   
nsIOService::NewChannelFromURI(chrome://communicator/skin/btn1/print-dis.gif)
00024.855:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/co
mmunicator/btn1/print-dis.gif)
00024.865:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/next-dis.gif)
00024.875:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/next-dis.gif)
00024.885:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/btn1/file-dis.gif)
00024.885:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/btn1/file-dis.gif)
00024.885:

00025.276:   
nsIOService::NewChannelFromURI(chrome://messenger/skin/icons/mast-mail.gif)
00025.276:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/me
ssenger/icons/mast-mail.gif)
00025.276:   
nsIOService::NewChannelFromURI(chrome://communicator/skin/toolbar/prtb-mid-top.g
if)
00025.276:   
nsIOService::NewChannelFromURI(jar:resource:///chrome/modern.jar!/skin/modern/co
mmunicator/toolbar/prtb-mid-top.gif)
00025.336:   
nsIOService::NewChannelFromURI(chrome://global/skin/splitter/grip-vrt-before.gif
)
00025.336:



Sorry guys, I posted info to the wrong bug. Please ingore it.
This is checked into the 0.9.6 branch as well.
Keywords: mozilla0.9.6+
i tried installing 0.9.trunk.2001111516 from ftp.mozilla.org, 
/pub/nightly/nightlies/latest/, it crashes at the same spot (profile manager), 
but i get another stacktrace, 1 less call to XPINSTAL.

i am not sure however that the build i got already got this patch included. the 
filedate was 15/11/01 17:48, not sure if two hours is enough time for the patch 
to propagate.

i'll check later.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
*** Bug 109948 has been marked as a duplicate of this bug. ***
crashing with trunk build 2001111605
:( ..sadly yes, me too.
Keywords: mozilla0.9.6+
since it seemed to be of help to dbaron, here's another stacktrace, this one 
from 2001111605.

when running, the window is now as small as can be. height is caption-height, 
width is the three buttons plus some extra. when resized, it is grey.

added dbaron@fas.harvard.edu to cc, as he fixed it the first time :) apologies 
if that's against bugzilla-tiquette.

stacktrace:

XPINSTAL! 60c16fd2()
XPINSTAL! 60c01770()
XPINSTAL! 60c07281()
JS3250! 60cb9cbd()
JS3250! 60cbee42()
JS3250! 60cba121()
JS3250! 60ca47e3()
JS3250! 60ca47a4()
JS3250! 60ca4726()
XPINSTAL! 60c0be51()
XPINSTAL! 60c0bbec()
XPISTUB! 60f1144b()
SETUP! 004132c7()
SETUP! 0040559e()

the assembly

  60C16FA0   lea         ecx,[ebp-18h]
  60C16FA3   call        dword ptr ds:[60C18530h]
  60C16FA9   push        0FFh
  60C16FAB   push        60C2085Ch
  60C16FB0   lea         ecx,[ebp-18h]
  60C16FB3   call        dword ptr ds:[60C18524h]
  60C16FB9   mov         eax,dword ptr [ebp-4]
  60C16FBC   and         dword ptr [ebp-4],0
  60C16FC0   test        eax,eax
  60C16FC2   je          60C16FCA
  60C16FC4   mov         ecx,dword ptr [eax]
  60C16FC6   push        eax
  60C16FC7   call        dword ptr [ecx+8]
  60C16FCA   mov         eax,dword ptr [esi+14h]
  60C16FCD   lea         edx,[ebp-4]
  60C16FD0   push        edx
  60C16FD1   push        eax
=>60C16FD2   mov         ecx,dword ptr [eax]
  60C16FD4   call        dword ptr [ecx+0B0h]
  60C16FDA   lea         eax,[ebp-18h]
  60C16FDD   lea         ecx,[ebp-6Ch]
  60C16FE0   push        eax
  60C16FE1   call        dword ptr ds:[60C184FCh]


and them registers:

 EAX = 00000000 EBX = 00000103 ECX = 0000000B EDX = 0012A684 ESI = 008AF3C0 
 EDI = 000000D9 EIP = 60C16FD2 ESP = 0012A608 EBP = 0012A688 EFL = 00000246
 MM0 = 000001117FFDE044 MM1 = 2B06000001110050 MM2 = 00B410F0000C091A 
 MM3 = CD08F0AB5DCC77E7 MM4 = 0000000000000000 MM5 = A000000000000000 
 MM6 = 9800000000000000 MM7 = A91CAA01FA11C800
 CS = 001B DS = 0023 ES = 0023 SS = 0023 FS = 003B GS = 0000 OV=0 UP=0 EI=1 
 PL=0 ZR=1 AC=0 PE=1 CY=0
 ST0 = -0.00000043865485890e+1004 ST1 = +0.00000000000000000e+0000 
 ST2 = -0.01196084063854026e+2115 ST3 = +0.00000000000000000e+0000
 ST4 = +0.00000000000000000e+0000 ST5 = +2.00000000000000000e+0001 
 ST6 = +1.90000000000000000e+0001 ST7 = +8.45559845559845513e+0001
 CTRL = 027F STAT = 0020 TAGS = FFFF EIP = 0041FA6D
 CS = 001B DS = 0023 EDO = 00128DD8

if there is something i can do to help here, don't hesitate to ask..

(besides putting this in an attachment, but hey! that would mean twice the 
amount of spam :)
Installer mozilla-win32-installer.exe from
ftp://ftp.mozilla.org/pub/mozilla/nightly/2001-11-16-05-trunk/ works for me.
I'm looking into it right now.
That disassembly in comment 60 seems to fit nicely with the
|mShortcutPath->Clone| (which is at index 44) call in
nsInstallFileOpItem::NativeFileOpWindowsShortcutAbort.
Thanks for the info David.  I've finally been able to setup a debug environment
in the problematic machine that is still able to reproduce the problem.

Installing VC6 actually fixed this problem, but not a good workaround for most
people.

The system in question could actually be unstable because a call to check for
the existance of a non-existant path returns true.  This is how the problem
starts. Then the shortcut creation routine fails on the non-existant path
surfacing other problems (dereferencing null pointers).

So the fix is actually several things:
1) fix the install.js scripts to use a path checking routine that works under
these (and normal) circumstances.  Use File.isDirectory() instead of File.exists().
2) fix the null pointer dereferencing.
3) make the shortcut creation routine non fatal on errors.  This will also fix
another bug (which escapes me at the moment).

patches coming up.
Assignee: syd → ssu
Status: REOPENED → NEW
downgrading from blocker to critical as it happens on only a few systems.
Severity: blocker → critical
Status: NEW → ASSIGNED
Attachment #58156 - Flags: review+
Attachment #58157 - Flags: review+
Attachment #58156 - Flags: superreview+
Comment on attachment 58157 [details] [diff] [review]
patch #2 (moz tree)

sr=dveditz for both #2 patches. r=curt was given earlier
Attachment #58157 - Flags: superreview+
patches checked in.  Grace tested the debug builds I provided to her with these
patches, and said they looked good.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
Fixed? I'm sorry to tell you but I keep running into this profile error, even
with the latest version, the one I just downloaded!
Ok, this is the version I used: mozilla-win32-installer-sea.exe, build
ID:2001111703 on WinNT4.

note: removed my profile and mozilla directory, but still no luck.
neil: the only build i see with that date/hour mark is a 0.9.6 build. is that
correct? (thanks for trying btw, spares me another crash :)

did someone check the patch into the 0.9.6 tree?

verified WFM build 2001111711 (neil, try this one!)

oh, all the new things i have missed!  great work, guys :)



and please, don't forget to check into the 0.9.6 branch....
Comment on attachment 58157 [details] [diff] [review]
patch #2 (moz tree)

a=dbaron for 0.9.6
Attachment #58157 - Flags: approval+
the last set of paches have been checked into the 0.9.6 branch.
Yes, now it works again, still, it took a very long time before someone fixed
this bug (:
verified on trunk build 2001111906 and 0.9.6 branch build 2001111814
Status: RESOLVED → VERIFIED
*** Bug 109053 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: