fixing blocker bug 108530 - Setup.exe error on install, mozilla launches with full screen empty page